--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
   <div class="bg-video">
     <video class="video" autoplay loop muted>
-      <source  src="./src/assets/video/yugi.mp4" type="video/mp4">/>
+      <source src="./src/assets/video/yugi.mp4" type="video/mp4">/>
     </video>
   </div>
   <div class="container">
     <div class="container__left framed-golden-2">
-      <div class="score_box frame" >
+      <div class="score_box frame">
         <span id="score_points">Win: 0 | Lose: 0</span>
       </div>
       <div class="menu_avatar">
@@ -34,8 +34,18 @@
         <p id="card-type">não</p>
       </div>
     </div>
+
+
     <div class="container__right">
-      <div class="card-box_container">
+      <div class="card-box__container">
+
+        <div class="card-box framed" id="computer-cards">
+        </div>
+
+        <div class="card-versus"></div>
+
+        <div class="card-box framed" id="player-cards">
+        </div>
 
       </div>
     </div>
