--- a/index.html
+++ b/index.html
@@ -42,7 +42,22 @@
         <div class="card-box framed" id="computer-cards">
         </div>
 
-        <div class="card-versus"></div>
+        <div class="card-versus">
+          <div class="versus-top">
+            <div class="card-infield">
+              <img class="player-field-card" width="125px" height="180px" />
+            </div>
+
+            <img height="100px" src="./src/assets/icons/millenium2.png" alt="">
+            <div class="card-infield">
+              <img class="computer-field-card" width="125px" height="180px" />
+            </div>
+
+          </div>
+          <div class="versus-bottom">
+            <button id="next-duel" class="rpgui-button" onclick="resetDuel()">Ganhou</button>
+          </div>
+        </div>
 
         <div class="card-box framed" id="player-cards">
         </div>
