--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
     <div class="container__right">
       <div class="card-box__container">
 
-        <div class="card-box framed" id="computer-cards">
-        </div>
+        <div class="card-box framed" id="computer-cards"></div>
 
-        <div class="card-versus">
+        <div class="card-versus__container">
           <div class="versus-top">
             <div class="card-infield">
               <img class="player-field-card" width="125px" height="180px" />
