--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="card-versus__container">
           <div class="versus-top">
             <div class="card-infield">
-              <img class="player-field-card" width="125px" height="180px" />
+              <img id="player-field-card" width="125px" height="180px" />
             </div>
 
             <img height="100px" src="./src/assets/icons/millenium2.png" alt="">
             <div class="card-infield">
-              <img class="computer-field-card" width="125px" height="180px" />
+              <img id="computer-field-card" width="125px" height="180px" />
             </div>
 
           </div>
