--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <img id="card-image">
       </div>
       <div class="card_details frame">
-        <p id="card-name">Eu</p>
-        <p id="card-type">não</p>
+        <p id="card-name">Selecione uma</p>
+        <p id="card-type">carta do seu dek</p>
       </div>
     </div>
 
