implementando os efeitos sonoros

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           </div>
           <div class="versus-bottom">
-            <button id="next-duel" class="rpgui-button" onclick="resetDuel()">Ganhou</button>
+            <button id="next-duel" class="rpgui-button" >Ganhou</button>
           </div>
         </div>
 
